[package]
name = "roast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = "3.4.2"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["signal"] }
rand = "0.8.5"
rcgen = "0.12.0"
rocket = { version = "0.5.0", features = ["tls", "json", "secrets"] }
serde = "1.0.195"
toml = "0.8.8"
