[package]
name = "roast-bin"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web based server handler for ANY runnable file!"
repository = "https://github.com/TheEmeraldBee/roast"

[[bin]]
name = "roast"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = "3.4.2"
lazy_static = "1.4.0"
rand = "0.8.5"
rcgen = "0.12.0"
rocket = { version = "0.5.0", features = ["tls", "json", "secrets"] }
serde = "1.0.195"
toml = "0.8.8"
